fix(core/modal): allow dialog to overflow

--- a/packages/core/src/components/button/button-mixin.scss
+++ b/packages/core/src/components/button/button-mixin.scss
@@ -137,6 +137,10 @@
       white-space: nowrap;
       text-overflow: ellipsis;
     }
+
+    .content-start {
+      width: 100%;
+    }
   }
 
   :host(.disabled) {
